# SMG2S

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  Test_K_Computer.sh  _citing.html  _formulas.tex  _gallery.html  _license.html  _matrix_c_s_r_8hpp_source.html  annotated.html  annotated_dup.js  c-smg2s_8h_source.html  class_nilpotent-members.html  class_nilpotent.html  class_nilpotent.js  classes.html  classpar_matrix_sparse-members.html  classpar_matrix_sparse.html  classpar_vector-members.html  classpar_vector.html  classpar_vector_map-members.html  classpar_vector_map.html  classpar_vector_map.js  cmake_clean.sh  configure  configure.ac  configure.scan  contact.html  dir_038e1d8af9aa3ef4c13098a604d0f17b.html  dir_038e1d8af9aa3ef4c13098a604d0f17b.js  dir_382b62fd9ca97535352e87eb3043a695.html  dir_3b92dc371e160d35cc352343b46e2661.html  dir_49e56c817e5e54854c35e136979f97ca.html  (+62 more)
.github/workflows/: build.sh  doxygen-gh-pages.yml  sphinx.yml
UI/: README.md  files.py  graph.py  interactif.py  settings.py
UI/img/: SMG2S_logomin.xbm
autom4te.cache/: output.1  requests  traces.0  traces.1
cmake/: Config.cmake.in
cmake-modules/: FindPAPI.cmake  FindScorep.cmake
config/: config.h  config.h.in
debug/: debug.h
docs/: CMakeLists.txt  Doxyfile  Overview.md  api.rst  build.rst  citing.rst  conf.py.in  contact.rst  contributing.rst  custom.rst  examples.rst  features.rst  gallery.rst  index.rst  intro.rst  license.rst  quick.rst
docs/html/: _matrix_c_s_r_8hpp_source.html  annotated.html  c-smg2s_8h_source.html  class_nilpotent-members.html  class_nilpotent.html  classes.html  classpar_matrix_sparse-members.html  classpar_matrix_sparse.html  classpar_matrix_sparse.js  classpar_vector-members.html  classpar_vector.html  classpar_vector.js  classpar_vector_map-members.html  classpar_vector_map.html  dir_038e1d8af9aa3ef4c13098a604d0f17b.html  dir_382b62fd9ca97535352e87eb3043a695.html  dir_3b92dc371e160d35cc352343b46e2661.html  dir_53e6fa9553ac22a5646d2a2b2d7b97a1.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_64b60b19b61a099e613071f0b57c9ecd.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b07ccd9f40e223ab222957d0c4311213.html  dir_b07ccd9f40e223ab222957d0c4311213.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_d60cd36bf94bb58f1a0897f6601957ee.html  files.html  formula.repository  functions.html  functions_func.html  functions_vars.html  group__group1.html  group__group2.html  group__group2.js  group__group3.html  group__group4.html  group__group4.js  group__group5.html  group__group5.js  group__group6.html  (+31 more)
docs/html/search/: all_10.js  all_11.js  all_2.js  all_4.js  all_5.js  all_7.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  functions_f.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  (+25 more)
example/C/: CMakeLists.txt  main.c  test_c.c
example/arnoldi/: arnoldi_example.cpp  arnoldi_example.h  makefile  script.sh
example/gmres/: gmres_example.cpp  gmres_example.h  makefile  vector.txt
example/krylov/: .nfs00000000050c135a00000067  krylov.c  krylov.h  makefile  script.sh  vector.txt  vector1.txt
example/python/: generate.py
example/teptra/: CMakeLists.txt  teptra_example.cpp
examples/: CMakeLists.txt  Makefile.am  Makefile.in  ex1.cpp  ex2.c  test.cpp
figure/: matgen.eps  vector1.eps
include/: smg2s-interface.hpp
include/C/: c-smg2s.h
include/parMatrix/: MatrixCSR.hpp  parMatrixSparse.hpp
include/parVector/: parVector.hpp  parVectorMap.hpp
include/smg2s/: initMat.hpp  nilpotent.hpp  smg2s.hpp  spectrum.hpp
include/utils/: MPI_DataType.hpp  logo.hpp  utils.hpp
interface/C/: c_test.c  c_wrapper.cc  c_wrapper.h  c_wrapper_origin.cc  main.c  script.sh
interface/PETSc/: c_test.c  makefile  petsc_interface.h  petsc_test.cpp
interface/Python/: MANIFEST  MANIFEST.in  README.txt  generate.py  (+4 more)
interface/Trilinos/: CMakeLists.txt  main.cpp  trilinos_cuda_interface.hpp  trilinos_interface.hpp
mat/: MatrixCSR.cc  MatrixCSR.h  SparseMatrix.cpp  SparseMatrix.h  exceptions.h  job.sh  openmp.cpp  test.cpp
nilpotent/: nilpotent.h
parMatrix/: CMakeLists.txt  MatrixCSR.h  initMat.h  matrix.mat  parMatrixSparse.cc  parMatrixSparse.h
parVector/: CMakeLists.txt  Makefile  parVector.cc  parVector.h  parVectorMap.cc  parVectorMap.h  test.cpp
pvec/: pVec.cc  pVec.h
scripts/: verification.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  (+33 more)
smg2s/: smg2s.h  smg2s_nonsymmetric.h  specGen.h  specGen_nonsymmetric.h
src/: cplex_smg2s.cpp  job.sh  smg2s.cpp  specGen.h
src/tests/: Makefile.am  Makefile.in  test_power.cpp
tests/: CMakeLists.txt  cplx_test.cpp  index.c  job.sh  spmv2_bench.cpp  spmv_bench.cpp  test.cpp  test_c.c  test_nilpotent.cpp  test_parMatrix.cpp  test_parVector.cpp  test_smg2s.cpp  test_smg2s_c.c  test_utils.cpp
utils/: MPI_DataType.h  logo.h  random.h  utils.h
vec/: pVec.cc  pVecMap.cc  pVecMap.h
verification/: .script.sh.swp  makefile  powerInverse.c  powerInverse.cpp  powerInverse.h  sc.py  scatter.py  script.sh  script_gpu.sh  slurm_cplx_eigen.sh  traitement.sh  vector.txt  vector1.txt  vector1_initial_clean.txt  vector1_results.txt  vector1_results_clean.txt  verification.sh
(+90 files in other folders)
